data/derived/fa15/progs/unify/prog3898.ml.out
Characters 54-55:
  wwhile (f, 2);;
          ^
Error: This expression has type int -> int * bool
       but an expression was expected of type int -> bool
       Type int * bool is not compatible with type bool 
